--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="/public/logo-square.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React + TS</title>
+  <title>MyTracker</title>
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="apple-mobile-web-app-title" content="My App">
-  <!-- <link rel="apple-touch-icon" href="public/logo.png"> -->
+  <meta name="apple-mobile-web-app-title" content="MyTracker">
+  <link rel="apple-touch-icon" href="/public/logo-square.png">
+
 
 </head>
 
