--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <meta name="apple-mobile-web-app-title" content="MyTracker">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+
   <link rel="apple-touch-icon" href="/public/logo-square.png">
 
+  <link id="pwa-manifest" rel="manifest" href="/manifest.json" />
 
 </head>
 
