--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body>
+<body style="overflow: hidden !important;">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
