Add Capacitor support

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/logo-square.png" />
+  <link rel="icon" type="image/png" href="./logo-square.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyTracker</title>
 
@@ -14,9 +14,9 @@
   <meta name="apple-mobile-web-app-title" content="MyTracker">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <link rel="apple-touch-icon" href="/public/logo-square.png">
+  <link rel="apple-touch-icon" href="./logo-square.png">
 
-  <link id="pwa-manifest" rel="manifest" href="/manifest.json" />
+  <link id="pwa-manifest" rel="manifest" href="./manifest.json" />
 
 </head>
 
