--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/public/logo-square.png" />
+  <link rel="icon" type="image/png" href="/logo-square.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MyTracker</title>
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="theme-color" content="#e0e0e0">
+
+  <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
+  <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 
   <meta name="apple-mobile-web-app-title" content="MyTracker">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-  <link rel="apple-touch-icon" href="/public/logo-square.png">
+  <link rel="apple-touch-icon" href="/logo-square.png">
 
   <link id="pwa-manifest" rel="manifest" href="/manifest.json" />
 
@@ -23,6 +26,15 @@
 <body style="overflow: hidden !important;">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker.register('/sw.js').catch(function (err) {
+          console.error('Service worker registration failed:', err)
+        })
+      })
+    }
+  </script>
 </body>
 
 </html>
