--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <meta name="theme-color" content="#e0e0e0">
 
-  <!-- <meta name="apple-mobile-web-app-capable" content="yes"> -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
