--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/logo-square.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MyTracker</title>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo-square.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MyTracker</title>
+    <meta name="theme-color" content="#e0e0e0" />
 
-  <meta name="theme-color" content="#e0e0e0">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
 
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="MyTracker" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0"
+    />
 
+    <link rel="apple-touch-icon" href="/logo-square.png" />
 
-  <meta name="apple-mobile-web-app-title" content="MyTracker">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link id="pwa-manifest" rel="manifest" href="/manifest.json" />
+  </head>
 
-  <link rel="apple-touch-icon" href="/logo-square.png">
-
-  <link id="pwa-manifest" rel="manifest" href="/manifest.json" />
-
-</head>
-
-<body style="overflow: hidden !important;">
-  <div id="root"></div>
-  <script type="module" src="/src/service-worker-event.ts"></script>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <body style="overflow: hidden !important">
+    <div id="root"></div>
+    <script type="module" src="/src/service-worker-event.ts"></script>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
