--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyTracker</title>
 
-    <meta name="theme-color" content="#e0e0e0" />
+    <meta name="theme-color" content="#f5f5f5" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="mobile-web-app-capable" content="yes" />
